fixed checkbox alignment in review page

--- a/src/public/css/base.css
+++ b/src/public/css/base.css
@@ -747,6 +747,7 @@ label {
     margin: 10px 0;
     font-weight: bold;
     font-size: 0.8rem;
+    font-family: Arial, Helvetica, sans-serify;
 
 }
 
