--- a/src/public/css/form.css
+++ b/src/public/css/form.css
@@ -33,6 +33,7 @@ label {
   font-weight: 600;
   color: #333;
   margin-bottom: 0.25rem;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 input[type="email"],
@@ -69,6 +70,7 @@ small {
   align-self: center;
   width: 100%;
   max-width: 200px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .btn-submit:hover {
@@ -138,7 +140,7 @@ textarea {
   width: 100%;
   max-width: 100vw;
   padding: 12px 16px;
-  margin-bottom: 20px;
+  /* margin-bottom: 2px; */
   font-size: 1rem;
   font-family: 'Roboto', sans-serif;
   border: 1px solid #ccc;
@@ -183,6 +185,10 @@ input#date-installed {
   width: 100%;
 }
 
+
+input#email {
+  height: 44px;
+}
 
 /* Input height adjustments */
 
@@ -240,18 +246,21 @@ fieldset.stars-rating {
 .wrap-checkbox {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  gap: 10px;
+  align-items: flex-start;  
+  /* gap: 10px;
+  margin-top:2px; */
 }
 
 .wrap-checkbox label {
   display: flex;
   align-items: center;
+  
 }
 
 .large-checkbox {
-  width: 20px;
-  height: 20px;
+  padding-top: 5px;
+  width: 18px;
+  height: 18px;
 }
 
 /* =============== ERROR MESSAGES =============== */
@@ -287,9 +296,9 @@ fieldset.stars-rating {
     font-size: 1rem;
   }
 
-  .wrap-checkbox label {
-    padding: 8px 0;
-  }
+  /* .wrap-checkbox label {
+    padding: 4px 0;
+  } */
 }
 
 @media (max-width: 330px) {
